[project]
name = "geoport"
version = "4.0.2"
description = "iOS location spoofing desktop application"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.3",
    "psutil>=7.2.2",
    "pycountry>=24.6.1",
    "pymobiledevice3>=9.9.0",
    "requests>=2.32.5",
    # Windows only dependency - will be skipped on other platforms
    "pyuac>=0.0.3; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.per-file-ignores]
"src/main.py" = ["E501"]  # Ignore line length errors in main.py for now

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pymobiledevice3.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyuac.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]